Renamings (#252)